core update with removed external storage and events