@@ -16,8 +16,8 @@ import com.netflix.conductor.annotations.VisibleForTesting;
 import com.netflix.conductor.common.metadata.tasks.TaskDef;
 import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
 import com.netflix.conductor.common.utils.TaskUtils;
-import com.netflix.conductor.core.events.ScriptEvaluator;
 import com.netflix.conductor.core.execution.WorkflowExecutor;
+import com.netflix.conductor.core.execution.evaluators.ScriptEvaluator;
 import com.netflix.conductor.core.utils.ParametersUtils;
 import com.netflix.conductor.model.TaskModel;
 import com.netflix.conductor.model.WorkflowModel;
@@ -247,7 +247,7 @@ public class DoWhile extends WorkflowSystemTask {
                                                                                         .getReferenceTaskName()))
                                                 && !task.getReferenceTaskName()
                                                         .equals(t.getReferenceTaskName())))
-                        .collect(Collectors.toList());
+                        .toList();
 
         for (TaskModel loopOverTask : loopOver) {
             conditionInput.put(
